# arageli

./: CMakeLists.txt  Makefile  Makefile.am  README  README.md  configure  configure.in  readme.txt
branches/2.2.9/trunk/: README  readme.txt
branches/CMake/: CMakeLists.txt  readme.txt
branches/CMake/test/: CMakeLists.txt  rational_is_normal.cpp  skeleton_motzkin_burger.cpp  timer_resolution.cpp
branches/autotools/: Makefile  configure.in
branches/autotools/doc/src/: Makefile  Makefile.am
branches/autotools/src/arageli/: Makefile  big_int.cpp  bigar.hpp  pollard_mult.cpp
branches/autotools/test/: Makefile  Makefile.am  bigint_multiply_divide.cpp  karatsuba.cpp  matrix_string_constructor.cpp  vector_inverse.cpp
branches/autotools/tool/ts/src/ts/: Makefile.am
branches/bug_1971908_lll_infinite_loop/test/: bug_1971908_lll_infinite_loop.cpp  sparse_polynom_multiply_divide_monom.cpp  vector_opposite.cpp
branches/bug_2574442_berlekamp_crash/test/: bug_2574442_berlekamp_crash.cpp  bug_2574442_berlekamp_crash_1.cpp  bug_2574442_berlekamp_crash_2.cpp  matrix_mult_col.cpp  test1part4.cpp
branches/bug_2655678_invalid_resultant/: Makefile
branches/bug_2655678_invalid_resultant/test/: bug_2655678_invalid_resultant.cpp
branches/bug_3031060_incorrect_string_convert_sparse_polynom/: README  readme.txt
branches/bug_3031060_incorrect_string_convert_sparse_polynom/test/: matrix_inverse.cpp  matrix_is_unit.cpp  test5.cpp
branches/cygwin/: Makefile  README  readme.txt
branches/cygwin/test/: Makefile  rational_sign.cpp  test1part4.cpp  vector_swap.cpp
branches/doc/example/: polynom_basic.cpp  residue_linear_system.cpp  vector_entries.cpp
branches/doc/test/: cone.cpp  karatsuba.cpp  vector.cpp  vector_mix_comp.cpp
branches/example_build/example/: Makefile  adv_simplex_method.cpp  big_int_basic.cpp  big_int_rational_functions.cpp  factorial.cpp  knuth_supergenerator.cpp  matrix_rref.cpp  polynom_basic.cpp  residue.cpp  sparse_polynom_algorithms.cpp  sparse_polynom_basic.cpp  sparse_polynom_creation.cpp  sparse_polynom_iterator.cpp  vector_lcm_gcd.cpp
branches/example_build/test/: berlekamp.cpp  berlekamp_hensel.cpp
branches/func_to_struct/test/: bigint_even_odd.cpp  test3.cpp  (+5 more)
branches/gmp/: Makefile
branches/io/: Makefile
branches/linux_build_fixed/: Makefile
branches/msvs_integration/: README
branches/multiplication/: Makefile
branches/polyhedron/: README
branches/pretrunk/: Makefile
branches/release/: README  readme.txt
branches/skeleton/: Makefile
branches/skeleton_2/: readme.txt
branches/x64/: README  readme.txt
clomp/test/: rational_inverse.cpp
doc/src/: CMakeLists.txt
doc/src/_pattern/eng/: _pattern.tex  included_pattern.tex
doc/src/_pattern/rus/: _pattern.tex  included_pattern.tex
doc/src/acg/rus/: acg.tex  content.tex
example/: CMakeLists.txt  Makefile  adv_simplex_method.cpp  algebraic_perf_compare.cpp  big_int_basic.cpp  matrix_basic.cpp  matrix_column_row.cpp  matrix_gauss.cpp  sparse_polynom_algorithms.cpp  sparse_polynom_creation.cpp  sparse_polynom_kroneker.cpp  sparse_polynom_matrix_smith.cpp  vector_matrix_io.cpp
morozov_andrey/: readme.txt
morozov_andrey/example/: Makefile
morozov_andrey/test/: big_int_io_binary.cpp  bigint_double_plus_double_minus.cpp  bigint_swap.cpp  brent.cpp  dense_sparse_polynom.cpp  gcd.cpp  lll_reduction.cpp  mandatory_object_functions.cpp  matrix_addmul_cols.cpp  matrix_matrix_mult.cpp  matrix_mult_row.cpp  matrix_ops.cpp  rand.cpp  rational.hpp  rational_constructor.cpp  rational_is_integer.cpp  rational_is_normal.cpp  rational_is_null.cpp  rational_is_unit.cpp  rational_opposite.cpp  rational_plus_minus.cpp  sparse_polynom_plus_minus_polynom.cpp  sparse_polynom_plus_minus_scalar.cpp  test3.cpp  vector_constructor.cpp  vector_inverse.cpp  vector_io_binary.cpp  vector_mul_div.cpp
perf/: CMakeLists.txt  Makefile  Makefile.am  karatsuba_vs_classic.cpp
src/arageli/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.am  _utility.cpp  _utility.hpp  advsimplmeth.cpp  advsimplmeth.hpp  algebraic.cpp  algebraic.hpp  algebrslt.cpp  arageli.hpp  berlekamp_hensel.cpp  big_const.cpp  big_float.cpp  big_float.hpp  big_float_impl.cpp  big_float_impl.hpp  big_int.cpp  big_int.hpp  bigar.cpp  bigar.hpp  cone.cpp  config.hpp  config.hpp.in  ctrl_latexlog.hpp  ctrl_slog.hpp  doc.header.html  exception.hpp  factory.hpp  fft.hpp  functional.hpp  gcd.cpp  generic.cpp  generic.hpp  groebner_basis.cpp  hgcd.cpp  hgcd.hpp  intalg.cpp  (+59 more)
src/arageli/algebraic/: algorithm_class.hpp  factory_polynum.hpp  matrix_frobeniuss_form.cpp  polynomial_number.cpp  polynomial_number.hpp  stop_indication_algorithm_class.hpp
src/arageli/setenumrnd/: integer.hpp
src/arageli/smith/: near_optimal.cpp
test/: CMakeLists.txt  Makefile  Makefile.am  algebraic_rref.cpp  berlekamp.cpp  berlekamp_hensel.cpp  big_int_io_binary.cpp  bigint_construct.cpp  bigint_double_plus_double_minus.cpp  bigint_even_odd.cpp  bigint_multiply_divide.cpp  bigint_null_unit.cpp  bigint_plus_minus.cpp  bigint_swap.cpp  brent.cpp  bug_1971908_lll_infinite_loop.cpp  bug_2574442_berlekamp_crash_1.cpp  bug_2574442_berlekamp_crash_2.cpp  bug_2655678_invalid_resultant.cpp  cone.cpp  dense_sparse_polynom.cpp  fft_multiplication.cpp  find_small_primes.cpp  gcd.cpp  intcount_barvinok.cpp  integer_divide.cpp  integer_size.cpp  io_simple_binary.hpp  karatsuba.cpp  lll_reduction.cpp  mandatory_object_functions.cpp  matrix_add_scalar.cpp  matrix_addmul_cols.cpp  matrix_addmul_rows.cpp  matrix_det.cpp  matrix_det_int.cpp  matrix_insert_col.cpp  matrix_insert_row.cpp  matrix_inverse.cpp  matrix_io_binary.cpp  (+95 more)
test/_pattern/: _pattern.cpp  _pattern.hpp
tool/script/: crlf2lf.py  crlf_finding.py  end_spaces_del.py  tab_finding.py
trunk/: README  readme.txt
trunk/perf/: Makefile
trunk/test/: bigint_construct.cpp  karatsuba.cpp  matrix_is_square.cpp  matrix_matrix_mult.cpp  matrix_mult_row.cpp  rational_numer_denom.cpp  rho_pollard_function.cpp  sparse_polynom_multiply_divide_monom.cpp  test4part5.cpp  test5.cpp  timer_resolution.cpp  vector_mul_div.cpp
(+630 files in other folders)
