set(arageli_test_sources
    algebraic_rref.cpp
    berlekamp.cpp
    berlekamp_hensel.cpp
    bigint_construct.cpp
    bigint_double_plus_double_minus.cpp
    bigint_even_odd.cpp
    big_int_io_binary.cpp
    bigint_multiply_divide.cpp
    bigint_null_unit.cpp
    bigint_plus_minus.cpp
    bigint_swap.cpp
    brent.cpp
    bug_1971908_lll_infinite_loop.cpp
    bug_2574442_berlekamp_crash_1.cpp
    bug_2574442_berlekamp_crash_2.cpp
    cone.cpp
    dense_sparse_polynom.cpp
    fft_multiplication.cpp
    find_small_primes.cpp
    gcd.cpp
    intcount_barvinok.cpp
    integer_divide.cpp
    integer_size.cpp
    karatsuba.cpp
    lll_reduction.cpp
    mandatory_object_functions.cpp
    matrix_addmul_cols.cpp
    matrix_addmul_rows.cpp
    matrix_add_scalar.cpp
    matrix_det.cpp
    matrix_det_int.cpp
    matrix_insert_col.cpp
    matrix_insert_row.cpp
    matrix_inverse.cpp
    matrix_io_binary.cpp
    matrix_is_null.cpp
    matrix_is_square.cpp
    matrix_is_unit.cpp
    matrix_matrix_add.cpp
    matrix_matrix_mult.cpp
    matrix_mul_scalar.cpp
    matrix_mult_col.cpp
    matrix_mult_row.cpp
    matrix_opposite.cpp
    matrix_ops.cpp
    matrix_string_constructor.cpp
    matrix_swap_col.cpp
    matrix_swap_row.cpp
    matrix_transpose.cpp
    minkowski_diff.cpp
    orthogonalization_generic_gram_schmidt.cpp
    pollard_pm1.cpp
    polyhedron_distance.cpp
    polynom_init_convert.cpp
    polynom_io_binary.cpp
    prime_miller_rabin.cpp
    rand.cpp
    rational_compares.cpp
    rational_constructor.cpp
    rational.cpp
    rational_ifloor_iceil_frac_abs.cpp
    rational_inverse.cpp
    rational_io_binary.cpp
    rational_is_integer.cpp
    rational_is_normal.cpp
    rational_is_null.cpp
    rational_is_unit.cpp
    rational_mul_div.cpp
    rational_numer_denom.cpp
    rational_opposite.cpp
    rational_plus_minus.cpp
    rational_sign.cpp
    rational_swap.cpp
    residue.cpp
    residue_factory.cpp
    rho_pollard_function.cpp
    skeleton_motzkin_burger.cpp
    smith_integer.cpp
    sparse_polynom_cmp.cpp
    sparse_polynom_multiply_divide_monom.cpp
    sparse_polynom_multiply_divide_polynom.cpp
    sparse_polynom_multiply_divide_scalar.cpp
    sparse_polynom_plus_minus_monom.cpp
    sparse_polynom_plus_minus_polynom.cpp
    sparse_polynom_plus_minus_scalar.cpp
    test1part1.cpp
    test1part2.cpp
    test1part3.cpp
    test1part4.cpp
    test2.cpp
    test3.cpp
    test4part1.cpp
    test4part2.cpp
    test4part3.cpp
    test4part4.cpp
    test4part5.cpp
    test4part6.cpp
    test4part7.cpp
    test4part8.cpp
    test5.cpp
    timer_resolution.cpp
    triangulate.cpp
    type_pair_traits_for_bn.cpp
    type_pair_traits_is_convertible.cpp
    vector_access.cpp
    vector_compares.cpp
    vector_constructor.cpp
    vector.cpp
    vector_inverse.cpp
    vector_io_binary.cpp
    vector_is_null.cpp
    vector_is_unit.cpp
    vector_matrix_init.cpp
    vector_mix_comp.cpp
    vector_mul_div.cpp
    vector_opposite.cpp
    vector_plus_minus.cpp
    vector_swap.cpp
    vector_take_subvector.cpp
    winograd.cpp
)

add_executable(arageli_test EXCLUDE_FROM_ALL ${arageli_test_sources})

target_compile_definitions(arageli_test PRIVATE
    ARAGELI_SOURCE
    ARAGELI_DEBUG_LEVEL=3
    ARAGELI_ASSERT_THROW_EXCEPTION
)

target_compile_options(arageli_test PRIVATE
    -g
    -O2
)

target_include_directories(arageli_test PRIVATE
    ../src
    ../tool/ts/src
)

target_link_libraries(arageli_test testarageli ts)
